# Bee_System

./: .gitignore  60_sec_data.csv  Beepre_mongo.py  DBSoundBasicInfo.py  Fake_Dataset_New.xlsx  README.md
audio-classification/: README.md  pyproject.toml
audio-classification/conf/base/: ._parameters.yml  parameters.yml
audio-classification/src/audio_classification/: __init__.py  __main__.py  settings.py
audio-classification/src/audio_classification/pipelines/: __init__.py
audio-classification/src/audio_classification/pipelines/classification/: ._pipeline.py  __init__.py  nodes.py  pipeline.py
model/: knn_model.pkl
